Finished Project-inner. Watch description.
1. Какие эфекты использует слайдер?(на данный момент слайды показываются
FadeIn-ом и описание с номером используют параллакс)
2. В Some Facts блоки текста  01 и 02 с параллаксом?
3. Буквы над слайдером в макете.  O t b .куда их? Если как остальные
параллаксить, то уйдут под слайдер и никто их не увидит

--- a/bitrix/templates/main/1-0projects-inner.html
+++ b/bitrix/templates/main/1-0projects-inner.html
@@ -96,7 +96,145 @@
 						</div>
 					</div>
 				</div>
-				<div class="project__gallery"></div>
+				<div class="wrapper__galery">
+					<div class="project__gallery">
+						<div class="project__galery-item">
+							<div class="item_photo"><img data-speed="10" data-direction="-1" src="/img/projects/galery1.jpg" alt="" class="parallax"></div>
+							<div data-speed="15" data-direction="1" class="item__description parallax">
+								<div class="heading">
+									<div class="heading-text">Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
+								</div>
+								<div class="number"><span>01</span>
+									<div class="number__sum"><span>11</span></div>
+								</div>
+							</div>
+						</div>
+						<div class="project__galery-item">
+							<div class="item_photo"><img data-speed="10" data-direction="-1" src="/img/projects/galery1.jpg" alt="" class="parallax"></div>
+							<div data-speed="15" data-direction="1" class="item__description parallax">
+								<div class="heading">
+									<div class="heading-text">Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
+								</div>
+								<div class="number"><span>02</span>
+									<div class="number__sum"><span>11</span></div>
+								</div>
+							</div>
+						</div>
+						<div class="project__galery-item">
+							<div class="item_photo"><img data-speed="10" data-direction="-1" src="/img/projects/galery1.jpg" alt="" class="parallax"></div>
+							<div data-speed="15" data-direction="1" class="item__description parallax">
+								<div class="heading">
+									<div class="heading-text">3Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
+								</div>
+								<div class="number"><span>03</span>
+									<div class="number__sum"><span>11</span></div>
+								</div>
+							</div>
+						</div>
+						<div class="project__galery-item">
+							<div class="item_photo"><img data-speed="10" data-direction="-1" src="/img/projects/galery1.jpg" alt="" class="parallax"></div>
+							<div data-speed="15" data-direction="1" class="item__description parallax">
+								<div class="heading">
+									<div class="heading-text">4Woodstable in Penthouse<br>Minsk <span>2015</span></div>
+								</div>
+								<div class="number"><span>04</span>
+									<div class="number__sum"><span>11</span></div>
+								</div>
+							</div>
+						</div>
+						<div class="project__galery-item">
+							<div class="item_photo"><img data-speed="10" data-direction="-1" src="/img/projects/galery1.jpg" alt="" class="parallax"></div>
+							<div data-speed="15" data-direction="1" class="item__description parallax">
+								<div class="heading">
+									<div class="heading-text">5Woodstable in Penthouse<br>Minsk<span>2015</span></div>
+								</div>
+								<div class="number"><span>05</span>
+									<div class="number__sum"><span>11</span></div>
+								</div>
+							</div>
+						</div>
+						<div class="project__galery-item">
+							<div class="item_photo"><img data-speed="10" data-direction="-1" src="/img/projects/galery1.jpg" alt="" class="parallax"></div>
+							<div data-speed="15" data-direction="1" class="item__description parallax">
+								<div class="heading">
+									<div class="heading-text">6Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
+								</div>
+								<div class="number"><span>06</span>
+									<div class="number__sum"><span>11</span></div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="galery__nav"></div>
+					<div class="letters">
+						<div data-direction="1" class="letters_item letters-w parallax">W</div>
+						<div data-speed="50" data-direction="1" class="letters_item letters-b parallax">e</div>
+					</div>
+				</div>
+				<section class="section kredo">
+					<div class="container container__kredo">
+						<div class="task__kredo">
+							<div class="task__kredo-photo"><img data-speed="20" data-direction="1" src="/img/projects/kredo.jpg" alt="" class="parallax"></div>
+							<div data-speed="15" data-direction="1" class="task__kredo-text parallax">We make a good<br>job and love our<br>work so much</div>
+						</div>
+					</div>
+					<div class="letters">
+						<div data-speed="15" data-direction="1" class="letters_item letters-s parallax">S</div>
+						<div data-speed="25" data-direction="1" class="letters_item letters-p parallax">P</div>
+						<div data-speed="40" data-direction="1" class="letters_item letters-e parallax">E</div>
+					</div>
+				</section>
+			</div>
+			<div class="container project__case"> 
+				<div class="task__projects">
+					<div class="product_selector">
+						<div class="product_selector-item">
+							<div class="product__head">Some facts</div>
+						</div>
+						<div class="product_selector-item">
+							<div class="product_selector-title">
+								<div class="heading">
+									<div class="heading-text"><span>01</span></div>
+								</div>
+							</div>
+							<div class="text">
+								<p>The project solves the distribution<br>and equipping a workspace of an <br>advertising agency in a building<br>of three free plants in Buenos<br>Aires, Argentina. </p>
+							</div>
+						</div>
+						<div data-speed="10" data-direction="1" class="product_selector-photo photo_left parallax"><img data-speed="10" data-direction="1" src="/img/projects/half.jpg" alt="" class="parallax">
+							<p data-speed="5" data-direction="1" class="text parallax">Two days before the release, Uli Sigg and director<br>Michael Schindhelm attended a screening<br>in Bern</p>
+						</div>
+						<div class="product_selector-item fact_2">
+							<div class="product_selector-title">
+								<div class="heading">
+									<div class="heading-text"><span>02</span></div>
+								</div>
+							</div>
+							<div class="text">
+								<p>The project solves the distribution<br>and equipping a workspace of an <br>advertising agency in a building<br>of three free plants in Buenos<br>Aires, Argentina. </p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="letters">
+					<div data-direction="1" class="letters_item letters-r parallax">R</div>
+					<div data-speed="25" data-direction="1" class="letters_item letters-i parallax">I</div>
+					<div data-direction="1" class="letters_item letters-g parallax">G</div>
+					<div data-direction="1" class="letters_item letters-t parallax">T</div>
+				</div>
+				<!--видео по желанию <video autoplay loop></video>-->
+				<div data-speed="15" data-direction="1" class="task__projects parallax">
+					<div class="product_selector">
+						<div class="product_selector-photo photo_right"><img src="/img/projects/here.jpg" alt=""></div>
+					</div>
+				</div>
+				<div class="task__projects">
+					<div class="product_selector">
+						<div class="product_selector-photo photo_center"><img data-speed="15" data-direction="1" src="/img/projects/photo_3.jpg" alt="" class="parallax">
+							<p data-speed="15" data-direction="1" class="text parallax">Two days before the release</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 		<section class="section section__links"><a href="#" data-speed="15" class="links parallax">
