--- a/src/jade/1-0projects-inner.jade
+++ b/src/jade/1-0projects-inner.jade
@@ -46,7 +46,170 @@ head
               .text
                 p
                   | Wooden table with a triangular- shaped hole in the middle.  Ideal for business meetings. Each place has a personal outlet for laptop
-        .project__gallery
+        .wrapper__galery
+          .project__gallery
+            .project__galery-item
+              .item_photo
+                img.parallax(data-speed='10',data-direction='-1',src="/img/projects/galery1.jpg", alt="")
+              .item__description.parallax(data-speed='15',data-direction='1')
+                .heading
+                  .heading-text
+                    | Woodstable in Penthouse
+                    br
+                    | Minsk 
+                    span  2015
+                .number
+                  span 01
+                  .number__sum
+                    span 11
+            .project__galery-item
+              .item_photo
+                img.parallax(data-speed='10',data-direction='-1',src="/img/projects/galery1.jpg", alt="")
+              .item__description.parallax(data-speed='15',data-direction='1')
+                .heading
+                  .heading-text
+                    | Woodstable in Penthouse
+                    br
+                    | Minsk 
+                    span  2015
+                .number
+                  span 02
+                  .number__sum
+                    span 11
+            .project__galery-item
+              .item_photo
+                img.parallax(data-speed='10',data-direction='-1',src="/img/projects/galery1.jpg", alt="")
+              .item__description.parallax(data-speed='15',data-direction='1')
+                .heading
+                  .heading-text
+                    | 3Woodstable in Penthouse
+                    br
+                    | Minsk 
+                    span  2015
+                .number
+                  span 03
+                  .number__sum
+                    span 11
+            .project__galery-item
+              .item_photo
+                img.parallax(data-speed='10',data-direction='-1',src="/img/projects/galery1.jpg", alt="")
+              .item__description.parallax(data-speed='15',data-direction='1')
+                .heading
+                  .heading-text
+                    | 4Woodstable in Penthouse
+                    br
+                    | Minsk 
+                    span 2015
+                .number
+                  span 04
+                  .number__sum
+                    span 11
+            .project__galery-item
+              .item_photo
+                img.parallax(data-speed='10',data-direction='-1',src="/img/projects/galery1.jpg", alt="")
+              .item__description.parallax(data-speed='15',data-direction='1')
+                .heading
+                  .heading-text
+                    | 5Woodstable in Penthouse
+                    br
+                    | Minsk
+                    span 2015
+                .number
+                  span 05
+                  .number__sum
+                    span 11
+            .project__galery-item
+              .item_photo
+                img.parallax(data-speed='10',data-direction='-1',src="/img/projects/galery1.jpg", alt="")
+              .item__description.parallax(data-speed='15',data-direction='1')
+                .heading
+                  .heading-text
+                    | 6Woodstable in Penthouse
+                    br
+                    | Minsk 
+                    span  2015
+                .number
+                  span 06
+                  .number__sum
+                    span 11
+          .galery__nav
+          .letters
+            .letters_item.letters-w.parallax(data-direction='1') W
+            .letters_item.letters-b.parallax(data-speed='50',data-direction='1') e
+        section.section.kredo
+          .container.container__kredo
+            .task__kredo
+              .task__kredo-photo
+                img.parallax(data-speed='20',data-direction='1',src="/img/projects/kredo.jpg", alt="")
+              .task__kredo-text.parallax(data-speed='15',data-direction='1') We make a good
+                br
+                | job and love our
+                br
+                | work so much
+          .letters
+              .letters_item.letters-s.parallax(data-speed='15',data-direction='1') S
+              .letters_item.letters-p.parallax(data-speed='25',data-direction='1') P
+              .letters_item.letters-e.parallax(data-speed='40',data-direction='1') E
+      .container.project__case 
+        .task__projects
+          .product_selector
+            .product_selector-item
+              .product__head Some facts
+            .product_selector-item
+              .product_selector-title
+                .heading
+                  .heading-text
+                    span 01
+              .text
+                p
+                  | The project solves the distribution
+                  br
+                  | and equipping a workspace of an 
+                  br
+                  |advertising agency in a building
+                  br
+                  | of three free plants in Buenos
+                  br
+                  | Aires, Argentina. 
+            .product_selector-photo.photo_left.parallax(data-speed='10',data-direction='1')
+              img.parallax(data-speed='10',data-direction='1',src="/img/projects/half.jpg", alt="")
+              p.text.parallax(data-speed='5',data-direction='1') Two days before the release, Uli Sigg and director
+                br
+                | Michael Schindhelm attended a screening
+                br
+                | in Bern
+            .product_selector-item.fact_2
+              .product_selector-title
+                .heading
+                  .heading-text
+                    span 02
+              .text
+                p
+                  | The project solves the distribution
+                  br
+                  | and equipping a workspace of an 
+                  br
+                  |advertising agency in a building
+                  br
+                  | of three free plants in Buenos
+                  br
+                  | Aires, Argentina. 
+        .letters
+          .letters_item.letters-r.parallax(data-direction='1') R
+          .letters_item.letters-i.parallax(data-speed='25',data-direction='1') I
+          .letters_item.letters-g.parallax(data-direction='1') G
+          .letters_item.letters-t.parallax(data-direction='1') T
+        //видео по желанию <video autoplay loop></video>
+        .task__projects.parallax(data-speed='15',data-direction='1')
+          .product_selector
+            .product_selector-photo.photo_right
+              img(src="/img/projects/here.jpg", alt="")
+        .task__projects
+          .product_selector
+            .product_selector-photo.photo_center
+              img.parallax(data-speed='15',data-direction='1',src="/img/projects/photo_3.jpg", alt="")
+              p.text.parallax(data-speed='15',data-direction='1') Two days before the release
+
     section.section.section__links
       a.links.parallax(href='#', data-speed='15')
         .section_container
