--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -39,12 +39,12 @@ html
               div
                 .sq-carousel-item.active
                   .shader
-                    a.link-shader(href='')
+                    a.link-shader(href='1-0projects-inner.html')
                       | Penthouse Minsk1 
                       span 2015
                 .sq-carousel-item
                   .shader
-                    a.link-shader(href='')
+                    a.link-shader(href='1-0projects-inner.html')
                       | Penthouse Minsk2 
                       span 2015
                 .sq-carousel-item
