--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -68,6 +68,7 @@ body {
 .container {
 	max-width: 1600px;
 	margin: 0 auto;
+	position: relative;
 }
 .backgrounded-rgrid {
 	// max-width: 662px;
@@ -1360,7 +1361,7 @@ body {
 		position: absolute;
 		&.letters-p {
 			top: 3%;
-			left: 11.5%;
+			left: 9.5%;
 		}
 		&.letters-r {
 			bottom: -2%;
@@ -1381,6 +1382,14 @@ body {
 		&.letters-i {
 			top: 9.1%;
 			right: 19.1%;
+		}
+		&.letters-w {
+			top: 1.1%;
+			left: 2.1%;
+		}
+		&.letters-b {
+			top: 51.1%;
+			right: 1.1%;
 		}
 	}
 }
@@ -2203,6 +2212,9 @@ body {
 	}
 				
 }
+.section{
+	position: relative;
+}
 .section__links {	
 	// padding: 100px 0 137px;
 	@include x-rem(padding, 100px 0 137px);
@@ -2425,9 +2437,12 @@ body {
 	@include x-rem(padding, 0 90px);
 	display: inline-block;
 	width: 100%;
-	.product_selector {
+	min-height:100px;
+	z-index: 2;
+	.product_selector{
 		margin-left: 0;
-		max-width: 1150px;
+		@include x-rem(max-width, 1150px);
+		position: relative;
 		@include x-rem(padding-left, 21px);
 		@include r(1280) {
 			padding-left: 0;
@@ -2450,17 +2465,272 @@ body {
 				}
 			}
 		}
+		.photo_left{
+			top:-5%;
+			right:-15%;
+			position: absolute;
+		}
+		.photo_center{
+			display: block !important;
+			margin:0 auto;
+		}
+		.photo_right{
+			@include x-rem(margin-left, 30px);
+		}
+		.product_selector-photo{
+				display: inline-block;
+				@include x-rem(max-width, 510px);
+				max-height: 700px;
+				overflow:hidden; 
+				img{
+					@include x-rem(max-height, 626px);
+				}
+				.text{
+					@include x-rem(margin-top, 35px);
+					color:$white;
+					@include x-rem(font-size, 12px);
+					font-family: $PragmaticaBook;
+					text-align: right;
+				  text-transform: uppercase;
+				  letter-spacing: 2px;
+				  line-height: 2;
+				}
+			}
 		.product__head {
 			font-family: $PragmaticaBold;
 			@include x-rem(font-size, 36px);
 			color: $white;
+			width: 100%;
 		}
 	}
 }
 .project__gallery {
 	@include x-rem(margin, 45px 0 0);
 	position: relative;
-	@include x-rem(padding, 0 90px 0 150px);
 	display: inline-block;
 	width: 100%;
+	z-index:2;
+.project__galery-item{
+	@include x-rem(max-width, 1210px);
+	position: relative;
+}
+.item_photo{
+	@include x-rem(max-width, 1080px);
+	display: inline-block;
+	float: left;
+	overflow:hidden;
+}
+.item__description{
+	position: absolute;
+	right:0;
+	bottom:-7%;
+	@include x-rem(width, 130px);
+	display: inline-block;
+	height: 100%;
+	min-height:1px;
+	color: $white;
+	@include x-rem(margin-left,65px);
+	
+	.heading{
+	@include x-rem(min-width, 400px);
+	display: inline-block;
+	vertical-align:bottom;
+	transform:rotate(270deg);
+	transform-origin: left bottom;
+	position: absolute;
+	bottom: 80px;
+	left: 100px;
+	@include x-rem(font-size, 18px);
+	font-family: $PragmaticaBold;
+	line-height:1.6;
+	letter-spacing:1.5px;
+	span{
+		font-weight:300;
+		font-family:$PragmaticaBook;
+		@include x-rem(font-size, 14px);
+	}
+}
+	.number{
+		display: inline-block;
+		position: absolute;
+		bottom:0;
+		right: 0;
+		@include x-rem(font-size, 46px)
+		font-weight: 600;
+		color:$red;
+		font-family: $PragmaticaBold;
+		letter-spacing: 4px;
+		span{
+			vertical-align: bottom;
+			line-height: 0.8;
+		}
+		.number__sum{
+			display: inline-block;
+			position: absolute;
+			top: 10px;
+			right: -20px;
+			color:$grey;
+			@include x-rem(font-size, 12px)
+			font-family: $PragmaticaBook;
+			font-weight: 300;
+		}
+	}
+}
+}
+.project__galery-nav{
+	@include x-rem(max-width,1080px);
+	@include x-rem(width,1080px);
+	list-style:none;
+	float: left;
+	height:42px;
+	text-align: right;
+	li{
+	cursor: pointer;
+	display: inline-block;
+	@include x-rem(width, 35px);
+	@include x-rem(margin-left,20px);
+	@include x-rem(height, 30px);
+	border-bottom: 1px solid;
+	border-bottom-color:$white;
+	button{
+		color:transparent;
+	}
+}
+	.slick-active{
+		border-bottom: 3px solid;
+		border-bottom-color:$red;
+		@include x-rem(height, 31px);
+	}
+
+}
+.wrapper__galery{
+	position:relative;
+	@include x-rem(padding, 0 90px 0 150px);
+}
+.slick-arrow{
+	top: 0;
+	width:40%;
+	position: absolute;
+	height:90%;
+	z-index:5;
+	.icon{
+		width:50px;
+		height:50px;
+		position: absolute;
+		.stroke{
+			stroke:$white;
+			transition:all 0.3s ease;
+		}
+		.fill{
+			fill:$white;
+			transition:all 0.3s ease;
+		}
+	}
+	&:hover{
+		.stroke{
+			stroke:$red;
+			transition:all 0.3s ease;
+		}
+		.fill{
+			fill:$red;
+			transition:all 0.3s ease;
+		}
+	}
+}
+.carousel-next{
+	right:0;
+	.icon{
+		left:100px;
+		bottom:100px;
+	}
+	&:hover{
+		cursor:e-resize;
+	}
+}
+.carousel-prev{
+	.icon{
+		transform:rotate(180deg);
+		top:150px;
+		left:110px;
+	}
+	&:hover{
+		cursor: w-resize;
+	}
+}
+.kredo{
+	.letters{
+		.letters_item{
+			&.letters-p{
+				left:3%;
+				bottom:5%;
+				top:auto;
+				}
+			&.letters-s{
+				bottom: -80.2%;
+			}
+			&.letters-e{
+				right: 30.2%;
+				left:auto;
+			}
+	}
+}
+}
+.project__case{
+	.letters{
+		.letters_item{
+			&.letters-t{
+				left:13%;
+				top: 20%;
+				}
+			&.letters-r{
+				left:40%;
+				top: 0;
+				bottom:auto;
+				right:auto;
+				}
+			&.letters-i{
+				right:47.5%;
+				top: 50%;
+				}
+			&.letters-g{
+				right:27.5%;
+				bottom: 5%;
+				left:auto;
+				}
+	}
+}
+} 
+.container__kredo{
+	@include x-rem(margin, 122px auto);
+	@include x-rem(padding, 0 160px);
+	@include clearfix;
+	.task__kredo-photo{
+			@include x-rem(width, 510px);
+			@include x-rem(height, 510px);
+			position: absolute;
+			top:-5%;
+			overflow: hidden;
+		}
+	.task__kredo{
+		position: relative;
+		@include x-rem(min-height, 500px);
+		z-index: 5;
+		.task__kredo-text{
+			position: absolute;
+			top:25%;
+			left:30%;
+			font-weight:600;
+			font-family: $PragmaticaBold;
+			color: $white;
+			line-height: 1.389;
+			text-transform: uppercase;
+			@include x-rem(font-size, 72px);
+			letter-spacing: 4px;
+
+		}
+	}
+}
+.fact_2{
+	margin-left:31.9% !important;
+	@include x-rem(margin-top,55px);
 }
