Readded Slider. Started 2-0about.
После 6 слайда слайдер№2 дико крутится, т.к. ему не были добавлены
соотв. элементы после 6го.
анимации черновые, есть пара идей, нету времени.

--- a/src/jade/2-0about.jade
+++ b/src/jade/2-0about.jade
@@ -16,132 +16,41 @@ head
   .wrapper
     section.section
       .section__head.head__projects-inner
-        .head__projects-bg
+        .head__projects-bg.head-about
           img(src='img/projects/projects.jpg', alt='')
         .lead.parallax(data-speed='5')
-          .title # woodtable
-        .head__projects-name
-          | Alfabank Minsk 
-          span 2015
+          .title # about
       .container
         .task__projects
-          .product_selector
+          .product_selector.product-about
             .product_selector-item
-              .product__head Interior design
+              .product__head Our factory has 
+                br
+                |a big history
             .product_selector-item
+              
+              .text.text-first
+                p
+                  |Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic
+
+              .text.text-second
+                p
+                  |Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.
+            .product_selector-item.big-text
               .product_selector-title
-                .heading
-                  .heading-text
-                    span Client
               .text
                 p
-                  | Big Ivanov`s family with 4 childrens 
-                  br
-                  | and dog Masha
-            .product_selector-item
-              .product_selector-title
-                .heading
-                  .heading-text
-                    span Task
-              .text
-                p
-                  | Wooden table with a triangular- shaped hole in the middle.  Ideal for business meetings. Each place has a personal outlet for laptop
-        .wrapper__galery
-          .galery__nav
-          .project__gallery
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-
-            .project__galery-item
-              .item_photo
-                img(src="/img/projects/galery1.jpg", alt="")
-          .galery__description-wrapper
-            .galery__description
-              .item__description
-                .heading
-                  .heading-text
-                    | 1Woodstable in Penthouse
-                    br
-                    | Minsk 
-                    span  2015
-              .item__description
-                .heading
-                  .heading-text
-                    | 2Woodstable in Penthouse
-                    br
-                    | Minsk 
-                    span  2015
-              .item__description
-                .heading
-                  .heading-text
-                    | 3Woodstable in Penthouse
-                    br
-                    | Minsk 
-                    span  2015
-              .item__description
-                .heading
-                  .heading-text
-                    | 4Woodstable in Penthouse
-                    br
-                    | Minsk 
-                    span  2015
-              .item__description
-                .heading
-                  .heading-text
-                    | 5Woodstable in Penthouse
-                    br
-                    | Minsk 
-                    span  2015
-              .item__description
-                .heading
-                  .heading-text
-                    | 6Woodstable in Penthouse
-                    br
-                    | Minsk 
-                    span  2015
-
-            .number
-              span
-            .number__sum
-              span 11
-          .letters
-            .letters_item.letters-w.parallax(data-direction='1') W
-            .letters_item.letters-b.parallax(data-speed='50',data-direction='1') e
+                  |Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office. Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.  
+        .container.container_presents
+          .task__projects
+            .presents__head 
+              |Andrew Marchyk present
+            .presents__block.block-text Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office. Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.  
+            .presents__block.block-img
+              img.parallax(data-speed='10',data-direction='1',src="/img/about/marchuk.jpg", alt="")
+            .presents__block.block-float
+              p Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. 
+              p.presents-article Andrew marchyk, shef
         section.section.kredo
           .container.container__kredo
             .task__kredo
