--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -39,7 +39,7 @@ html
               div
                 .sq-carousel-item.active
                   .shader
-                    a.link-shader(href='1-0projects-inner.html')
+                    a.link-shader(href='2-0about.html')
                       | Penthouse Minsk1 
                       span 2015
                 .sq-carousel-item
