--- a/bitrix/templates/main/2-0about.html
+++ b/bitrix/templates/main/2-0about.html
@@ -62,119 +62,45 @@
 	<div class="wrapper">
 		<section class="section">
 			<div class="section__head head__projects-inner">
-				<div class="head__projects-bg"><img src="img/projects/projects.jpg" alt=""></div>
+				<div class="head__projects-bg head-about"><img src="img/projects/projects.jpg" alt=""></div>
 				<div data-speed="5" class="lead parallax">
-					<div class="title"># woodtable</div>
+					<div class="title"># about</div>
 				</div>
-				<div class="head__projects-name">Alfabank Minsk <span>2015</span></div>
 			</div>
 			<div class="container">
 				<div class="task__projects">
-					<div class="product_selector">
+					<div class="product_selector product-about">
 						<div class="product_selector-item">
-							<div class="product__head">Interior design</div>
+							<div class="product__head">Our factory has <br>a big history</div>
 						</div>
 						<div class="product_selector-item">
-							<div class="product_selector-title">
-								<div class="heading">
-									<div class="heading-text"><span>Client</span></div>
-								</div>
+							<div class="text text-first">
+								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic</p>
 							</div>
-							<div class="text">
-								<p>Big Ivanov`s family with 4 childrens <br>and dog Masha</p>
+							<div class="text text-second">
+								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.</p>
 							</div>
 						</div>
-						<div class="product_selector-item">
-							<div class="product_selector-title">
-								<div class="heading">
-									<div class="heading-text"><span>Task</span></div>
-								</div>
-							</div>
+						<div class="product_selector-item big-text">
+							<div class="product_selector-title"></div>
 							<div class="text">
-								<p>Wooden table with a triangular- shaped hole in the middle.  Ideal for business meetings. Each place has a personal outlet for laptop</p>
+								<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office. Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.  </p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="wrapper__galery">
-					<div class="galery__nav"></div>
-					<div class="project__gallery">
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+				<div class="container container_presents">
+					<div class="task__projects">
+						<div class="presents__head">
+							 
+							Andrew Marchyk present
 						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
+						<div class="presents__block block-text">Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office. Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. We decided to show you the process and filmed the creation of our office.  </div>
+						<div class="presents__block block-img"><img data-speed="10" data-direction="1" src="/img/about/marchuk.jpg" alt="" class="parallax"></div>
+						<div class="presents__block block-float">
+							<p>Many of our clients want to know how we create interior designs in our studio, what processes happen in our brains, and how this magic is then transformed into reality. </p>
+							<p class="presents-article">Andrew marchyk, shef</p>
 						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-						<div class="project__galery-item">
-							<div class="item_photo"><img src="/img/projects/galery1.jpg" alt=""></div>
-						</div>
-					</div>
-					<div class="galery__description-wrapper">
-						<div class="galery__description">
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">1Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">2Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">3Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">4Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">5Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-							<div class="item__description">
-								<div class="heading">
-									<div class="heading-text">6Woodstable in Penthouse<br>Minsk <span> 2015</span></div>
-								</div>
-							</div>
-						</div>
-						<div class="number"><span></span></div>
-						<div class="number__sum"><span>11</span></div>
-					</div>
-					<div class="letters">
-						<div data-direction="1" class="letters_item letters-w parallax">W</div>
-						<div data-speed="50" data-direction="1" class="letters_item letters-b parallax">e</div>
 					</div>
 				</div>
 				<section class="section kredo">
