--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -90,7 +90,7 @@
 						<div class="sq-carousel_rotator sq-carousel-c">
 							<div>
 								<div class="sq-carousel-item active">
-									<div class="shader"><a href="1-0projects-inner.html" class="link-shader">Penthouse Minsk1 <span>2015</span></a></div>
+									<div class="shader"><a href="2-0about.html" class="link-shader">Penthouse Minsk1 <span>2015</span></a></div>
 								</div>
 								<div class="sq-carousel-item">
 									<div class="shader"><a href="1-0projects-inner.html" class="link-shader">Penthouse Minsk2 <span>2015</span></a></div>
